--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Profile card component</title>
   <style>
   </style>
@@ -16,8 +16,8 @@
 <body>
 
   <div class="container">
-    <img src="/images/bg-pattern-card.svg" alt="">
-    <img src="/images/image-victor.jpg" alt="">
+    <img src="images/bg-pattern-card.svg" alt="">
+    <img src="images/image-victor.jpg" alt="">
     <main>
       <h3>
         Victor Crest <span>26</span>
